# OpenGL_project

./: .clang-format  .gitignore  CMakeLists.txt
.cache/clangd/index/: _fixes.hpp.3669A726EC9A5052.idx  _vectorize.hpp.0D0698261305592C.idx  camera.cpp.335E8B1130BD491F.idx  camera.h.916AE47595275970.idx  common.hpp.186C6301E90D3212.idx  compute_common.hpp.975001132E7D3FC2.idx  compute_vector_relational.hpp.6745FC843E9FB841.idx  constants.hpp.923A105C091485C9.idx  constants.inl.6AA0DA9AF480CB8D.idx  enums.h.00AD8472198C1273.idx  epsilon.hpp.F10576E817CC1714.idx  epsilon.inl.911FB02A182623A2.idx  exponential.hpp.D320E448934B2D40.idx  func_common.inl.7BD582A8ACFAFB3A.idx  func_exponential.inl.4CD429C790B89DAC.idx  func_geometric.inl.F950FB213DE65509.idx  func_integer.inl.AD17F81DEE792336.idx  func_matrix.inl.9A7451FB61906256.idx  func_packing.inl.76E2DFF71E50890C.idx  func_trigonometric.inl.B9D7E43735C40827.idx  func_vector_relational.inl.FBBC0825C9FDC1A7.idx  fwd.hpp.71C6E453D3BFD2E3.idx  geometric.hpp.4BDB0DEDD54C0351.idx  glew.h.F3ED6F41E6F36C14.idx  glfw3.h.F42BCF835CCDA3EC.idx  glm.hpp.302AB9FBE46A9923.idx  integer.hpp.2D005EB7566EAC93.idx  main.cpp.9370D0CBABF41D0A.idx  mat2x2.hpp.24A87631C49DFF1F.idx  mat2x3.hpp.79CCE49031691100.idx  mat2x4.hpp.A3E8CBDA24F41366.idx  mat3x2.hpp.3096C81C571073DC.idx  mat3x3.hpp.6890C55EF7AA8A37.idx  mat3x4.hpp.C7AB775E2FD35F81.idx  mat4x2.hpp.AFDB77AA4DECB8DE.idx  mat4x3.hpp.67E0D9E2FD86B068.idx  mat4x4.hpp.E25D7F87F7CA161B.idx  matrix.hpp.0FCFCFD7A9170E7C.idx  matrix_clip_space.hpp.DDD8402B4E0887D0.idx  (+153 more)
assets/asteroid/: asteroid.mtl
assets/leaf/: leaf.mtl
assets/planet/: planet.mtl
assets/window/: window.mtl
source/: build.sh  camera.cpp  camera.h  enums.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h  system.cpp  system.h  utilities.cpp  utilities.h
source/shader/base/: fragment.fs  (+1 more)
(+28 files in other folders)
